# pafplot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  v.27.paf  v.paf  x.bed
.github/workflows/: ci.yml
src/: main.rs
tests/: b-3106.paf
