[package]
name = "pafplot"
version = "0.1.0"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
boomphf = "0.6.0"
itertools = "0.14.0"
fnv = "1.0.7"
lodepng = "3.12.1"
rgb = "0.8.52"
line_drawing = "1.0.1"
base64 = "0.21.7"
paf = "0.2.1"
bgzip = "0.3.0"
flate2 = "1.1.2"
